tests/errors/semantics/argument_count_mismatch.odl
main :: () -> void  {
    add :: (a: int, b: int) -> int {
        return a + b;
    };

    add(1);
};